--- a/views/onepractice.jade
+++ b/views/onepractice.jade
@@ -19,16 +19,7 @@ block content
       h3 Feladat
       .row
         .col-xs-12
-          ul.task-list
-            li Hozz létre egy objektumot "User" néven.
-            li
-              | Legyen az objektumnak két tulajdonsága:
-              br
-              | name, age.
-            li
-              | A tulajdonságok értékei a következőek legyenek:
-              br
-              | 'Joe', 35.
+          |!{ content }
       h3 Megoldás
       .row
         .col-xs-12
