--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,16 +3,16 @@ body {
 }
 
 .CodeMirror {
-	height: 200px;
+	height: auto;
 	width: 100%;
 	border: 1px solid #ddd;
 	border-radius: 3px;
 	box-shadow: 0 0 5px black;
 	font-size: 22px;
 }
-.CodeMirror-scroll {
+/*.CodeMirror-scroll {
 	max-height: 200px;
-}
+}*/
 .CodeMirror pre {
 	padding-left: 7px; line-height: 1.25;
 }
