Feat: scroll page after tests.

--- a/views/onepractice.jade
+++ b/views/onepractice.jade
@@ -21,7 +21,7 @@ block content
       .row
         .col-xs-12.description
           |!{ content }
-      h3 Megoldás
+      h3.solution Megoldás
       .row
         .col-xs-12
           .row
