--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,6 +17,9 @@ body {
 .CodeMirror pre {
 	padding-left: 7px; line-height: 1.25;
 }
+.CodeMirror .disabled-text {
+	opacity: 0.7;
+}
 
 .qunit-panel {
 	display: none;
