--- a/views/onepractice.jade
+++ b/views/onepractice.jade
@@ -26,7 +26,7 @@ block content
         .col-xs-12
           .row
             .col-xs-12
-              textarea#student-area
+              textarea#student-area= testContent
       .clearfix  
       .row
         .col-xs-12
